--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<!-- Author Meta -->
 		<meta name="author" content="codepixer">
 		<!-- Meta Description -->
-		<meta name="description" content="">
+		<meta name="description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
 		<!-- Meta Keyword -->
-		<meta name="keywords" content="">
+		<meta name="keywords" content="smartwatch, wearable technology, fitness tracker, smartwatches, wearable gadgets, tech accessories, Smartwatch4U">
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Watch</title>
+		<title>smartwatch 4U</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
