--- a/index.html
+++ b/index.html
@@ -509,14 +509,23 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<h6>Newsletter</h6>
 								<p>Stay update with our latest</p>
 								<div class="" id="mc_embed_signup">
-									<form name="contact" netlify>
+									<form name="contact" netlify target="_blank" novalidate="true"  class="form-inline">
+										<input class="form-control" type="email" name="email" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" >
+			                            	<button class="click-btn btn btn-default" type="submit"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
+			                            	<div style="position: absolute; left: -5000px;">
+												<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+											</div>
+
+										<div class="info"></div>
+									</form>
+									<!-- <form name="contact" netlify>
 										<p>
 											<label>Email <input type="email" name="email" /></label>
 										</p>
 										<p>
 											<button type="submit">Send</button>
 										</p>
-									</form>
+									</form> -->
 								</div>
 							</div>
 						</div>						
