--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 										<input class="form-control" type="email" name="email" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" >
 			                            	<button class="click-btn btn btn-default" type="submit"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></button>
 			                            	<div style="position: absolute; left: -5000px;">
-												<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
+												<input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="submit">
 											</div>
 
 										<div class="info"></div>
