--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 				          <li><a href="#unique">similar item</a></li>
 				          <li><a href="#review">Review</a></li>
 				          <li><a href="#faq">Faq</a></li>
+									<li><a href="">Blog</a></li>
 				          <!-- <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
 				              <li><a href="generic.html">Generic</a></li>
