--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 	<!DOCTYPE html>
 	<html lang="en" class="no-js">
 	<head>
+		<meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
+		<meta prefix="og: http://ogp.me/ns#" property="og:title" content="smartwatch 4U">
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="canonical" href="https://www.smartwatch4u.com/">
 		<!-- Favicon-->
 		<link rel="shortcut icon" href="img/fav2.png">
 		<link href="img/fav2.png" rel="apple-touch-icon">
@@ -12,10 +15,12 @@
 		<meta name="description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="smartwatch, wearable technology, fitness tracker, smartwatches, wearable gadgets, tech accessories, Smartwatch4U">
+		
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
 		<title>smartwatch 4U</title>
+
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
