--- a/index.html
+++ b/index.html
@@ -20,7 +20,23 @@
 		<meta charset="UTF-8">
 		<!-- Site Title -->
 		<title>smartwatch 4U</title>
+		
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://www.smartwatch4u.com/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="smartwatch 4U">
+<meta property="og:description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
+<meta property="og:image" content="/img/c12.jpg">
 
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="smartwatch4u.com">
+<meta property="twitter:url" content="https://www.smartwatch4u.com/">
+<meta name="twitter:title" content="smartwatch 4U">
+<meta name="twitter:description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
+<meta name="twitter:image" content="/img/c12.jpg">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
