--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 							<h6>Military Smart Watch for Men</h6>
 							<h1>The perfect smartwatch <br>
 								to meet your needs.</h1>
-							<p><span>Our ultimate destination for the latest and greatest in smartwatch technology.</span></p>
+							<p><span>Our ultimate destination for the latest and greatest in <strong>smartwatch</strong>  technology.</span></p>
 							<p>
-								Whether you’re a fitness enthusiast, a tech-savvy professional, or someone who loves staying connected on the go, we have the perfect smartwatch to meet your needs.
+								Whether you’re a fitness enthusiast, a tech-savvy professional, or someone who loves staying connected on the go, we have the perfect <strong>smart watch</strong> to meet your needs.
 							</p>
 							<a class="primary-btn" href="#">Buy Now</a>
 						</div>
@@ -137,14 +137,14 @@
 								<span class="lnr lnr-rocket"></span>
 								<a href="#"><h4>Multifunctional smartwatch</h4></a>
 								<p>
-									This men's smartwatch features multiple built-in functions and will be a great companion in your daily life.
+									This men's <strong>smart watch</strong> features multiple built-in functions and will be a great companion in your daily life.
 								</p>
 							</div>
 							<div class="single-course">
 								<span class="lnr lnr-cog"></span>
 								<a href="#"><h4>Customize your personal dial</h4></a>
 								<p>
-									eaturing a 1.39'' HD full touchscreen display with 360*360 pixels, this smartwatch provides super clear picture quality restoration. You can adjust the brightness to 5 levels, making it suitable for outdoor sports enthusiasts.
+									eaturing a 1.39'' HD full touchscreen display with 360*360 pixels, this <strong>smartwatch</strong> provides super clear picture quality restoration. You can adjust the brightness to 5 levels, making it suitable for outdoor sports enthusiasts.
 								</p>
 							</div>							
 						</div>
@@ -186,7 +186,7 @@
 								<span>This fitness tracker watch features over 100 sports modes</span>
 							</p>
 							<p>
-								Smartwatch can be used to monitor critical data such as workout heart rate, distance traveled, movement speed, and calories burned in real time for most sports modes, to help you track and improve your athletic performance.
+								<strong>Smart watch</strong> can be used to monitor critical data such as workout heart rate, distance traveled, movement speed, and calories burned in real time for most sports modes, to help you track and improve your athletic performance.
 							</p>
 							<a class="text-uppercase primary-btn" href="https://amzn.to/3WM1baf" target="_blank">get details</a>
 						</div>
@@ -211,7 +211,7 @@
 							<div class="single-service">
 								<h4><span class="lnr lnr-user"></span>Military Grade Standard & 5ATM Waterproof</h4>
 								<p>
-									Njord gear smart watch has passed various tests for durability, including drilling, crushing, exposure to hot steam, salt spray, and liquid contamination. Additionally, it can continue to function even in very low temperatures.
+									Njord gear <strong>smart watch</strong> has passed various tests for durability, including drilling, crushing, exposure to hot steam, salt spray, and liquid contamination. Additionally, it can continue to function even in very low temperatures.
 								</p>
 							</div>
 						</div>
