--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>smartwatch 4U: Wear the Future</title>
+		<title>smartwatch 4U: Smart Future</title>
 		
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://www.smartwatch4u.com/">
