--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			    <div class="container">
 			    	<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="index.html"><img src="img/logo1.png" alt="" title="" /></a>
+				        <a href="index.html"><img src="img/logo1.png" alt="logo de smartwatch 4U" title="Logo" /></a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
@@ -113,7 +113,7 @@
 						</div>
 						<div class="col-lg-6 video-right justify-content-center align-items-center d-flex">
 							<div class="overlay overlay-bg"></div>
-							<a class="play-btn" href="https://www.youtube.com/watch?v=RW-RRJescQo"><img class="img-fluid" src="img/play-icon.png" alt=""></a>
+							<a class="play-btn" href="https://www.youtube.com/watch?v=RW-RRJescQo"><img class="img-fluid" src="img/play-icon.png" alt="play icon"></a>
 						</div>
 					</div>
 				</div>	
@@ -149,7 +149,7 @@
 							</div>							
 						</div>
 						<div class="col-lg-6 course-middle">
-							<img class="img-fluid mx-auto d-block" src="img/c11.png" alt="">
+							<img class="img-fluid mx-auto d-block" src="img/c11.png" alt=" image of military smart watch">
 						</div>
 						<div class="col-lg-3 course-right">
 							<div class="single-course">
@@ -177,7 +177,7 @@
 				<div class="container-fluid">				
 					<div class="row justify-content-center align-items-center">
 						<div class="col-lg-6 no-padding home-about-left">
-							<img class="img-fluid" src="img/about-img1.jpg" alt="">
+							<img class="img-fluid" src="img/about-img1.jpg" alt="about image">
 						</div>
 						<div class="col-lg-6 no-padding home-about-right">
 							<h1>100+ <br>
@@ -275,7 +275,7 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-6">
 							<div class="single-unique-product">
-								<img class="img-fluid" src="img/u11.jpg" alt="">
+								<img class="img-fluid" src="img/u11.jpg" alt="Smart Watch Rugged">
 								<div class="desc">
 									<h4>
 										Smart Watch Rugged
@@ -287,7 +287,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6">
 							<div class="single-unique-product">
-								<img class="img-fluid" src="img/u22.jpg" alt="">
+								<img class="img-fluid" src="img/u22.jpg" alt="Amazfit Bip 5">
 								<div class="desc">
 									<h4>
 										Amazfit Bip 5
@@ -299,7 +299,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6">
 							<div class="single-unique-product">
-								<img class="img-fluid" src="img/u33.jpg" alt="">
+								<img class="img-fluid" src="img/u33.jpg" alt="Amazfit T-Rex 2">
 								<div class="desc">
 									<h4>
 										Amazfit T-Rex 2
@@ -311,7 +311,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6">
 							<div class="single-unique-product">
-								<img class="img-fluid" src="img/u44.jpg" alt="">
+								<img class="img-fluid" src="img/u44.jpg" alt="Amazfit GTR 3">
 								<div class="desc">
 									<h4>
 										Amazfit GTR 3
