--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-6">
 							<div class="single-unique-product">
-								<img class="img-fluid" src="img/u11.jpg" alt="Smart Watch Rugged">
+								<img class="img-fluid" src="img/u11.jpg" alt="Smart Watch Rugged" title="Smart Watch Rugged">
 								<div class="desc">
 									<h4>
 										Smart Watch Rugged
@@ -287,7 +287,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6">
 							<div class="single-unique-product">
-								<img class="img-fluid" src="img/u22.jpg" alt="Amazfit Bip 5">
+								<img class="img-fluid" src="img/u22.jpg" alt="Amazfit Bip 5" title="Amazfit Bip 5">
 								<div class="desc">
 									<h4>
 										Amazfit Bip 5
@@ -299,7 +299,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6">
 							<div class="single-unique-product">
-								<img class="img-fluid" src="img/u33.jpg" alt="Amazfit T-Rex 2">
+								<img class="img-fluid" src="img/u33.jpg" alt="Amazfit T-Rex 2" title="Amazfit T-Rex 2">
 								<div class="desc">
 									<h4>
 										Amazfit T-Rex 2
@@ -311,7 +311,7 @@
 						</div>
 						<div class="col-lg-3 col-md-6">
 							<div class="single-unique-product">
-								<img class="img-fluid" src="img/u44.jpg" alt="Amazfit GTR 3">
+								<img class="img-fluid" src="img/u44.jpg" alt="Amazfit GTR 3" title="Amazfit GTR 3">
 								<div class="desc">
 									<h4>
 										Amazfit GTR 3
