--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						</div>
 						<div class="col-lg-6 video-right justify-content-center align-items-center d-flex">
 							<div class="overlay overlay-bg"></div>
-							<a class="play-btn" href="https://www.youtube.com/watch?v=RW-RRJescQo"><img class="img-fluid" src="img/play-icon.png" alt="play icon"></a>
+							<a class="play-btn" href="https://www.youtube.com/watch?v=RW-RRJescQo"><img class="img-fluid" src="img/play-icon.png" alt="play icon" title="play icon"></a>
 						</div>
 					</div>
 				</div>	
@@ -149,7 +149,7 @@
 							</div>							
 						</div>
 						<div class="col-lg-6 course-middle">
-							<img class="img-fluid mx-auto d-block" src="img/c11.png" alt=" image of military smart watch">
+							<img class="img-fluid mx-auto d-block" src="img/c11.png" alt=" image of military smart watch" title="military smart watch">
 						</div>
 						<div class="col-lg-3 course-right">
 							<div class="single-course">
@@ -177,7 +177,7 @@
 				<div class="container-fluid">				
 					<div class="row justify-content-center align-items-center">
 						<div class="col-lg-6 no-padding home-about-left">
-							<img class="img-fluid" src="img/about-img1.jpg" alt="about image">
+							<img class="img-fluid" src="img/about-img1.jpg" alt="about image" title="about">
 						</div>
 						<div class="col-lg-6 no-padding home-about-right">
 							<h1>100+ <br>
