--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
-				          <li class="menu-active"><a href="#home">Home</a></li>
-				          <li><a href="#about">About</a></li>
-				          <li><a href="#service">Unique Feature</a></li>
-				          <li><a href="#unique">similar item</a></li>
-				          <li><a href="#review">Review</a></li>
-				          <li><a href="#faq">Faq</a></li>
+				          <li class="menu-active"><a href="#home" title="home">Home</a></li>
+				          <li><a href="#about" title="about">About</a></li>
+				          <li><a href="#service" title="Unique Feature">Unique Feature</a></li>
+				          <li><a href="#unique" title="similar item">similar item</a></li>
+				          <li><a href="#review" title="Review">Review</a></li>
+				          <li><a href="#faq" title="Faq">Faq</a></li>
 									<li><a href="https://www.bestdealseveresthn.com/smart%20watch" target="_blank">Blog</a></li>
 				          <!-- <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
