--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				          <li><a href="#unique" title="similar item">similar item</a></li>
 				          <li><a href="#review" title="Review">Review</a></li>
 				          <li><a href="#faq" title="Faq">Faq</a></li>
-									<li><a href="https://www.bestdealseveresthn.com/smart%20watch" target="_blank">Blog</a></li>
+									<li><a href="https://www.bestdealseveresthn.com/smart%20watch" target="_blank" title="Blog">Blog</a></li>
 				          <!-- <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
 				              <li><a href="generic.html">Generic</a></li>
