--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<h1>
 								Smart Future				
 							</h1>
-							<a href="https://amzn.to/3WM1baf" target="_blank" class="primary-btn text-uppercase">Buy Now</a>
+							<a href="https://amzn.to/3WM1baf" target="_blank" class="primary-btn text-uppercase" title=" Buy Now button">Buy Now</a>
 						</div>											
 					</div>
 				</div>
@@ -113,7 +113,7 @@
 						</div>
 						<div class="col-lg-6 video-right justify-content-center align-items-center d-flex">
 							<div class="overlay overlay-bg"></div>
-							<a class="play-btn" href="https://www.youtube.com/watch?v=RW-RRJescQo"><img class="img-fluid" src="img/play-icon.png" alt="play icon" title="play icon"></a>
+							<a class="play-btn" href="https://www.youtube.com/watch?v=RW-RRJescQo" title="youtube video"><img class="img-fluid" src="img/play-icon.png" alt="play icon" title="play icon"></a>
 						</div>
 					</div>
 				</div>	
@@ -188,7 +188,7 @@
 							<p>
 								<strong>Smart watch</strong> can be used to monitor critical data such as workout heart rate, distance traveled, movement speed, and calories burned in real time for most sports modes, to help you track and improve your athletic performance.
 							</p>
-							<a class="text-uppercase primary-btn" href="https://amzn.to/3WM1baf" target="_blank">get details</a>
+							<a class="text-uppercase primary-btn" href="https://amzn.to/3WM1baf" target="_blank" title="get details">get details</a>
 						</div>
 					</div>
 				</div>	
@@ -281,7 +281,7 @@
 										Smart Watch Rugged
 									</h4>
 									<h6>$57.87</h6>
-									<a class="text-uppercase primary-btn" href="https://amzn.to/4azNL4G" target="_blank">Buy Now</a>
+									<a class="text-uppercase primary-btn" href="https://amzn.to/4azNL4G" target="_blank" title="amazon buy now button">Buy Now</a>
 								</div>
 							</div>
 						</div>
@@ -293,7 +293,7 @@
 										Amazfit Bip 5
 									</h4>
 									<h6>$89.00</h6>
-									<a class="text-uppercase primary-btn" href="https://amzn.to/4bPSSP4" target="_blank">Buy Now</a>
+									<a class="text-uppercase primary-btn" href="https://amzn.to/4bPSSP4" target="_blank" title="amazon buy now button">Buy Now</a>
 								</div>
 							</div>
 						</div>
@@ -522,7 +522,7 @@
 								</p>
 								<p class="footer-text">
 									<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" title="Colorlib">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 								</p>								
 							</div>
