--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 										Amazfit T-Rex 2
 									</h4>
 									<h6>$199.99</h6>
-									<a class="text-uppercase primary-btn" href="https://amzn.to/45dY3Xb" target="_blank">Buy Now</a>
+									<a class="text-uppercase primary-btn" href="https://amzn.to/45dY3Xb" target="_blank" title="Buy Now">Buy Now</a>
 								</div>
 							</div>
 						</div>
@@ -317,7 +317,7 @@
 										Amazfit GTR 3
 									</h4>
 									<h6>$119.99</h6>
-									<a class="text-uppercase primary-btn" href="https://amzn.to/44Uoa5b" target="_blank">Buy Now</a>
+									<a class="text-uppercase primary-btn" href="https://amzn.to/44Uoa5b" target="_blank" title="Buy Now">Buy Now</a>
 								</div>
 							</div>
 						</div>																		
