--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 							<h6>Military Smart Watch for Men</h6>
 							<h1>The perfect smartwatch <br>
 								to meet your needs.</h1>
-							<p><span>Our ultimate destination for the latest and greatest in <strong>smartwatch</strong>  technology.</span></p>
+							<p><span>Our ultimate destination for the latest and greatest in <strong>smartwatch</strong>technology.</span></p>
 							<p>
 								Whether you’re a fitness enthusiast, a tech-savvy professional, or someone who loves staying connected on the go, we have the perfect <strong>smart watch</strong> to meet your needs.
 							</p>
-							<a class="primary-btn" href="#">Buy Now</a>
+							<a class="primary-btn" href="https://amzn.to/3WM1baf" title="Buy Now">Buy Now</a>
 						</div>
 						<div class="col-lg-6 video-right justify-content-center align-items-center d-flex">
 							<div class="overlay overlay-bg"></div>
@@ -135,14 +135,14 @@
 						<div class="col-lg-3 course-left">
 							<div class="single-course">
 								<span class="lnr lnr-rocket"></span>
-								<a href="#"><h4>Multifunctional smartwatch</h4></a>
+								<h4>Multifunctional smartwatch</h4>
 								<p>
 									This men's <strong>smart watch</strong> features multiple built-in functions and will be a great companion in your daily life.
 								</p>
 							</div>
 							<div class="single-course">
 								<span class="lnr lnr-cog"></span>
-								<a href="#"><h4>Customize your personal dial</h4></a>
+								<h4>Customize your personal dial</h4>
 								<p>
 									eaturing a 1.39'' HD full touchscreen display with 360*360 pixels, this <strong>smartwatch</strong> provides super clear picture quality restoration. You can adjust the brightness to 5 levels, making it suitable for outdoor sports enthusiasts.
 								</p>
@@ -154,14 +154,14 @@
 						<div class="col-lg-3 course-right">
 							<div class="single-course">
 								<span class="lnr lnr-cloud-check"></span>
-								<a href="#"><h4>The weather forecast</h4></a>
+								<h4>The weather forecast</h4>
 								<p>
 									Check whether "weather push" is turned on in the "FitCloudPro”APP page.（Open the "FitCloudPro”APP>Click on the "Me" page >Click on "Units">Set your customary unit).
 								</p>
 							</div>
 							<div class="single-course">
 								<span class="lnr lnr-phone"></span>
-								<a href="#"><h4>Bluetooth call and message notification</h4></a>
+								<h4>Bluetooth call and message notification</h4>
 								<p>
 									When you receive multiple notifications, the smart watch may shorten the content of each notification. However, you can view the preview by clicking the title of each notification.
 								</p>
