--- a/index.html
+++ b/index.html
@@ -557,10 +557,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<h6>Follow Us</h6>
 								<p>Let us be social</p>
 								<div class="footer-social d-flex align-items-center">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-dribbble"></i></a>
-									<a href="#"><i class="fa fa-behance"></i></a>
+									<a href="#" title="facebook"><i class="fa fa-facebook"></i></a>
+									<a href="#" title="twitter"><i class="fa fa-twitter"></i></a>
+									<a href="#" title="dribbble"><i class="fa fa-dribbble"></i></a>
+									<a href="#" title="facebook"><i class="fa fa-behance"></i></a>
 								</div>
 							</div>
 						</div>							
