--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta name="description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="smartwatch, wearable technology, fitness tracker, smartwatches, wearable gadgets, tech accessories, Smartwatch4U">
-		
+		<meta name="robots" content="index, follow"> <!-- for search engine indexing -->
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
