--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="canonical" href="https://www.smartwatch4u.com/">
 		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav2.png">
+		<link href="img/fav2.png" rel="shortcut icon" >
 		<link href="img/fav2.png" rel="apple-touch-icon">
 		<!-- Author Meta -->
 		<meta name="author" content="codepixer">
