--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 										Smart Watch Rugged
 									</h4>
 									<h6>$57.87</h6>
-									<a class="text-uppercase primary-btn" href="https://amzn.to/4azNL4G" target="_blank" title="amazon buy now button">Buy Now</a>
+									<a class="text-uppercase primary-btn" href="https://amzn.to/4gMzQvV" target="_blank" title="amazon buy now button">Buy Now</a>
 								</div>
 							</div>
 						</div>
