--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<h1>
 								Smart Future				
 							</h1>
-							<a href="https://amzn.to/3WM1baf" target="_blank" class="primary-btn text-uppercase" title=" Buy Now button">Buy Now</a>
+							<a href="https://amzn.to/3C5Yngk" target="_blank" class="primary-btn text-uppercase" title=" Buy Now button">Buy Now</a>
 						</div>											
 					</div>
 				</div>
