--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<p>
 								Whether you’re a fitness enthusiast, a tech-savvy professional, or someone who loves staying connected on the go, we have the perfect <strong>smart watch</strong> to meet your needs.
 							</p>
-							<a class="primary-btn" href="https://amzn.to/4gO5fxT" title="Buy Now">Buy Now</a>
+							<a class="primary-btn" href="https://amzn.to/3C5Yngk" title="Buy Now">Buy Now</a>
 						</div>
 						<div class="col-lg-6 video-right justify-content-center align-items-center d-flex">
 							<div class="overlay overlay-bg"></div>
