--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="footer-social d-flex align-items-center">
 									<a href="#" title="facebook"><i class="fa fa-facebook"></i></a>
 									<a href="#" title="twitter"><i class="fa fa-twitter"></i></a>
-									<a href="#" title="dribbble"><i class="fa fa-dribbble"></i></a>
+									<a href="https://www.youtube.com/channel/UCa3e9aAO3B3bqRizNC0e-fg" title="youtube"><i class="fa fa-youtube"></i></a>
 									<a href="#" title="facebook"><i class="fa fa-behance"></i></a>
 								</div>
 							</div>
