--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			<link rel="stylesheet" href="css/animate.min.css">
 			<link rel="stylesheet" href="css/owl.carousel.css">
 			<link rel="stylesheet" href="css/main.css">
+			<meta name="google-site-verification" content="F_HLbuP3rNbLkYFa_axXe2LGtLCK1UhyZid4MP4cgyI" />
 		</head>
 		<body>
 
