--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				          <li><a href="#unique" title="similar item">similar item</a></li>
 				          <li><a href="#review" title="Review">Review</a></li>
 				          <li><a href="#faq" title="Faq">Faq</a></li>
-									<li><a href="https://blogeveresthn.netlify.app/" target="_blank" title="Blog">Blog</a></li>
+									<li><a href="https://www.everesthnblog.store/smart_watch" target="_blank" title="Blog">Blog</a></li>
 				          <!-- <li class="menu-has-children"><a href="">Pages</a>
 				            <ul>
 				              <li><a href="generic.html">Generic</a></li>
@@ -91,7 +91,7 @@
 							<h1>
 								Smart Future				
 							</h1>
-							<a href="https://amzn.to/3C5Yngk" target="_blank" class="primary-btn text-uppercase" title=" Buy Now button">Buy Now</a>
+							<a href="https://amzn.to/4lQiq3K" target="_blank" class="primary-btn text-uppercase" title=" Buy Now button">Buy Now</a>
 						</div>											
 					</div>
 				</div>
@@ -110,7 +110,7 @@
 							<p>
 								Whether you’re a fitness enthusiast, a tech-savvy professional, or someone who loves staying connected on the go, we have the perfect <strong>smart watch</strong> to meet your needs.
 							</p>
-							<a class="primary-btn" href="https://amzn.to/3C5Yngk" title="Buy Now">Buy Now</a>
+							<a class="primary-btn" href="https://amzn.to/4lQiq3K" title="Buy Now">Buy Now</a>
 						</div>
 						<div class="col-lg-6 video-right justify-content-center align-items-center d-flex">
 							<div class="overlay overlay-bg"></div>
@@ -189,7 +189,7 @@
 							<p>
 								<strong>Smart watch</strong> can be used to monitor critical data such as workout heart rate, distance traveled, movement speed, and calories burned in real time for most sports modes, to help you track and improve your athletic performance.
 							</p>
-							<a class="text-uppercase primary-btn" href="https://amzn.to/3WM1baf" target="_blank" title="get details">get details</a>
+							<a class="text-uppercase primary-btn" href="https://amzn.to/4lQiq3K" target="_blank" title="get details">get details</a>
 						</div>
 					</div>
 				</div>	
@@ -276,13 +276,13 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-6">
 							<div class="single-unique-product">
-								<img class="img-fluid" src="img/u11.jpg" alt="Smart Watch Rugged" title="Smart Watch Rugged">
+								<img class="img-fluid" src="img/u11.png" alt="Smart Watch Rugged" title="Smart Watch Rugged">
 								<div class="desc">
 									<h4>
-										Smart Watch Rugged
+										Prime Day Deal
 									</h4>
-									<h6>$57.87</h6>
-									<a class="text-uppercase primary-btn" href="https://amzn.to/4gMzQvV" target="_blank" title="amazon buy now button">Buy Now</a>
+									<h6>$45.59</h6>
+									<a class="text-uppercase primary-btn" href="https://amzn.to/3GvaMg6" target="_blank" title="amazon buy now button">Buy Now</a>
 								</div>
 							</div>
 						</div>
@@ -293,8 +293,8 @@
 									<h4>
 										Amazfit Bip 5
 									</h4>
-									<h6>$89.00</h6>
-									<a class="text-uppercase primary-btn" href="https://amzn.to/4bPSSP4" target="_blank" title="amazon buy now button">Buy Now</a>
+									<h6>$52.24</h6>
+									<a class="text-uppercase primary-btn" href="https://amzn.to/3IjYkjP" target="_blank" title="amazon buy now button">Buy Now</a>
 								</div>
 							</div>
 						</div>
@@ -305,8 +305,8 @@
 									<h4>
 										Amazfit T-Rex 2
 									</h4>
-									<h6>$199.99</h6>
-									<a class="text-uppercase primary-btn" href="https://amzn.to/45dY3Xb" target="_blank" title="Buy Now">Buy Now</a>
+									<h6>$119.99</h6>
+									<a class="text-uppercase primary-btn" href="https://amzn.to/4nC6vrL" target="_blank" title="Buy Now">Buy Now</a>
 								</div>
 							</div>
 						</div>
@@ -317,8 +317,8 @@
 									<h4>
 										Amazfit GTR 3
 									</h4>
-									<h6>$119.99</h6>
-									<a class="text-uppercase primary-btn" href="https://amzn.to/44Uoa5b" target="_blank" title="Buy Now">Buy Now</a>
+									<h6>$104.99</h6>
+									<a class="text-uppercase primary-btn" href="https://amzn.to/4kCUQX3" target="_blank" title="Buy Now">Buy Now</a>
 								</div>
 							</div>
 						</div>																		
