--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- SEO Meta Tags -->
   <meta name="author" content="Smartwatch4U Team">
   <meta name="description" content="Smartwatch4U offers the latest smartwatches with advanced features and stylish designs. Stay connected and track your fitness with our top-of-the-line wearable technology.">
-  <meta name="keywords" content="smartwatch, wearable technology, fitness tracker, smartwatches, wearable gadgets, tech accessories, Smartwatch4U">
+  <meta name="keywords" content="smartwatch,watch,sustainable fashion brands to watch,leading sustainable clothing brands,sustainable fashion brands to watch,sustainable fashion ideas, tendencias em smartwatch fitness, wearable technology, fitness tracker, smartwatches, wearable gadgets, tech accessories, Smartwatch4U">
   <meta name="robots" content="index, follow">
 
   <!-- Open Graph Meta Tags -->
